--- a/Simulators/ks-simulator/KS-modelConv.ipynb
+++ b/Simulators/ks-simulator/KS-modelConv.ipynb
@@ -774,7 +774,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
