--- a/Simulators/ks-simulator/Models/KS-modelConv_3.ipynb
+++ b/Simulators/ks-simulator/Models/KS-modelConv_3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "rrWwDC5TCKU9"
    },
@@ -26,6 +26,13 @@
     "#from KS import KS\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some functions"
    ]
   },
   {
@@ -48,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "seMr-weECKVF"
    },
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "s7_tBZVPCKVJ"
    },
@@ -92,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "h6x5PBNqCKVN"
    },
@@ -113,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "miDKdnW2CKVQ"
    },
@@ -152,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "q8ft6IKHCvVa"
    },
@@ -232,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "Qi00m-dVCKVV"
    },
@@ -241,8 +248,7 @@
     "final_time = 10000 # the total time of the simulation\n",
     "dt = 0.05 # the time step \n",
     "length = 22 # the \"physical\" length of the domaine. pay attention cuz this value will determine if the system is regular or chaotic\n",
-    "sample_points = 64 # the number of sample points on this length. It will be the size of the input in our system\n",
-    "#state_initial = np.loadtxt('u1.dat') #the observed initial state of the system"
+    "sample_points = 64 # the number of sample points on this length. It will be the size of the input in our system"
    ]
   },
   {
@@ -501,7 +507,7 @@
     "    #starting the training here:\n",
     "    for e in range(epochs):\n",
     "        model.train()\n",
-    "        print(\"{}\\t\".format(e),\"{:.5f}..\\t\".format(train_losses[-1]),\"{:.5f}..\".format(valid_losses[-1]))  \n",
+    "        #print(\"{}\\t\".format(e),\"{:.5f}..\\t\".format(train_losses[-1]),\"{:.5f}..\".format(valid_losses[-1]))  \n",
     "        np.random.shuffle(idx)\n",
     "        running_loss=0\n",
     "        for bi in range(nbatch):\n",
@@ -528,18 +534,18 @@
     "            loss=loss_fn(ttf_calc,ttf)\n",
     "            running_loss+=loss.item()\n",
     "            valid_losses.append(running_loss)\n",
-    "    print(\"{}\\t\".format(e+1),\"{:.5f}..\\t\".format(train_losses[-1]),\"{:.5f}..\".format(valid_losses[-1]))     \n",
-    "    print(\"---------- Best : {:.3f}\".format(min(valid_losses)), \" at epoch \" \n",
-    "          , np.fromiter(valid_losses, dtype=np.float).argmin(), \" / \",epochs )\n",
-    "    print('Execution time={:.2f}s'.format(time.time()-start_time))\n",
+    "    #print(\"{}\\t\".format(e+1),\"{:.5f}..\\t\".format(train_losses[-1]),\"{:.5f}..\".format(valid_losses[-1]))     \n",
+    "    #print(\"---------- Best : {:.3f}\".format(min(valid_losses)), \" at epoch \" \n",
+    "    #      , np.fromiter(valid_losses, dtype=np.float).argmin(), \" / \",epochs )\n",
+    "    #print('Execution time={:.2f}s'.format(time.time()-start_time))\n",
     "    #plot some graphs\n",
-    "    plt.figure(figsize = (9, 1.5))\n",
-    "    ax= plt.subplot(1, 2, 1)\n",
-    "    plt.plot(train_losses)\n",
-    "    ax.set_ylim(bottom=0)\n",
-    "    ax= plt.subplot(1, 2, 2)\n",
-    "    plt.plot(valid_losses)\n",
-    "    ax.set_ylim(bottom=0)\n",
+    "    #plt.figure(figsize = (9, 1.5))\n",
+    "    #ax= plt.subplot(1, 2, 1)\n",
+    "    #plt.plot(train_losses)\n",
+    "    #ax.set_ylim(bottom=0)\n",
+    "    #ax= plt.subplot(1, 2, 2)\n",
+    "    #plt.plot(valid_losses)\n",
+    "    #ax.set_ylim(bottom=0)\n",
     "    return train_losses, valid_losses"
    ]
   },
@@ -554,14 +560,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "mLhDnJ9zCKWJ"
    },
    "outputs": [],
    "source": [
-    "Lin = size_conv_time\n",
-    "in_ch_conv_1 = sample_points\n",
+    "Lin = 100\n",
+    "in_ch_conv_1 = 64\n",
     "out_ch_conv_1 = 128\n",
     "k_conv_1 = 10\n",
     "st_conv_1 = 2\n",
@@ -585,7 +591,7 @@
     "\n",
     "in_lin = sample_points\n",
     "hidden_1 = sample_points*5\n",
-    "out_lin = sample_points*steps_to_predict\n",
+    "out_lin = sample_points*10\n",
     "\n",
     "\n",
     "model = th.nn.Sequential(\n",
@@ -634,39 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 1329,
-     "status": "ok",
-     "timestamp": 1591738884895,
-     "user": {
-      "displayName": "Gabriel Callado",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14Ghnvi183GuMBSeeGPSUTAterZ8HcEuC0_0pR7xFtA=s64",
-      "userId": "08786233999723143686"
-     },
-     "user_tz": 180
-    },
-    "id": "CH6nwo7BB89d",
-    "outputId": "72d3a05b-50f4-416f-9be4-8e7bfe01718c"
-   },
-   "outputs": [],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cd ../kaggle/working"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "glc7JcBEEBC0"
    },
@@ -674,13 +648,8 @@
    "source": [
     "#TO SAVE THE MODEL\n",
     "\n",
-    "# Here we create a dictionnary to store what we need: \n",
-    "# 1/ the epoch number\n",
-    "# 2/ the batch size\n",
-    "# 2/ the paramters of the model\n",
-    "# 3/ the paramters of the optimizer\n",
-    "# 4/ the loss function we used\n",
-    "tosave_data = {'epoch': epochs_counter,\n",
+    "tosave_data = {'model': model,\n",
+    "               'epoch': epoch,\n",
     "               'batch_size': batch_size,\n",
     "               'model_state_dict': model.state_dict(),\n",
     "               'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -728,11 +697,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lin = size_conv_time\n",
+    "Lin = 150\n",
     "in_ch_conv_1 = 64\n",
     "out_ch_conv_1 = 128\n",
     "k_conv_1 = 4\n",
@@ -757,7 +726,7 @@
     "\n",
     "in_lin = int(sample_points*L_5)\n",
     "hidden_1 = sample_points*25\n",
-    "out_lin = sample_points*steps_to_predict\n",
+    "out_lin = sample_points*50\n",
     "\n",
     "model = th.nn.Sequential(\n",
     "    th.nn.Conv1d(in_ch_conv_1,out_ch_conv_1,k_conv_1,st_conv_1,pad_conv_1),\n",
@@ -795,15 +764,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "state_history_norm_th = th.from_numpy(state_history_norm).cuda()\n",
     "#state_history_norm_th = state_history_norm_th.unsqueeze(0)\n",
     "start_position=200\n",
@@ -824,6 +784,140 @@
     "N_step_simu=30\n",
     "print('Start_position=', start_position)\n",
     "pp,yy = prediction(model,start_position,N_step_simu,steps_to_predict,size_conv_time,state_history_norm_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd ../kaggle/working/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training with different epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(50):\n",
+    "    epochs_counter=5\n",
+    "    batch_size=64\n",
+    "    train_losses, valid_losses = train(model,X_train_th,X_valid_th,Y_train_th,Y_valid_th,epochs=epochs_counter,batch_size=batch_size)\n",
+    "    tosave_data = {'model': model,\n",
+    "               'epoch': epochs_counter,\n",
+    "               'batch_size': batch_size,\n",
+    "               'model_state_dict': model.state_dict(),\n",
+    "               'optimizer_state_dict': optimizer.state_dict(),\n",
+    "               'loss': loss_fn,\n",
+    "               'training loss': train_losses,\n",
+    "               'valid loss': valid_losses,}\n",
+    "    th.save(tosave_data, str(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training with different steps_to_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(12):\n",
+    "    \n",
+    "    size_conv_time=150\n",
+    "    steps_to_predict = (i+1)*5\n",
+    "\n",
+    "    Y_train = np.zeros((Nt, sample_points, steps_to_predict))\n",
+    "    aux=0\n",
+    "    for ind in train_ind:\n",
+    "        Y_train[aux,:,:]=Y[ind:ind+steps_to_predict].T\n",
+    "        aux=aux+1\n",
+    "\n",
+    "    Y_train = Y_train.reshape(Nt,sample_points*steps_to_predict)\n",
+    "\n",
+    "\n",
+    "    Y_valid = np.zeros((Nv, sample_points, steps_to_predict))\n",
+    "    aux=0\n",
+    "    for ind in valid_ind:\n",
+    "        Y_valid[aux,:,:]=Y[ind:ind+steps_to_predict].T\n",
+    "        aux=aux+1\n",
+    "\n",
+    "    Y_valid = Y_valid.reshape(Nv,sample_points*steps_to_predict)\n",
+    "\n",
+    "    #converting to tensor\n",
+    "    Y_train_th = th.from_numpy(Y_train).cuda()\n",
+    "    Y_valid_th = th.from_numpy(Y_valid).cuda()\n",
+    "    \n",
+    "    Lin = size_conv_time\n",
+    "    in_ch_conv_1 = 64\n",
+    "    out_ch_conv_1 = 128\n",
+    "    k_conv_1 = 4\n",
+    "    st_conv_1 = 2\n",
+    "    pad_conv_1 = 4\n",
+    "    L_2 = (Lin+2*pad_conv_1-(k_conv_1-1)-1)/st_conv_1+1\n",
+    "\n",
+    "    k_pool_1= 2\n",
+    "    st_pool_1= 2\n",
+    "    L_3 = (L_2 - k_pool_1)/st_pool_1 + 1\n",
+    "\n",
+    "    in_ch_conv_2 = 128\n",
+    "    out_ch_conv_2 = 64\n",
+    "    k_conv_2 = 5\n",
+    "    st_conv_2 = 2\n",
+    "    pad_conv_2 = 1\n",
+    "    L_4 = (L_3+2*pad_conv_2-(k_conv_2-1)-1)/st_conv_2+1\n",
+    "\n",
+    "    k_pool_2= 5\n",
+    "    st_pool_2= 2\n",
+    "    L_5 = (L_4 - k_pool_2)/st_pool_2 + 1\n",
+    "\n",
+    "    in_lin = int(sample_points*L_5)\n",
+    "    hidden_1 = sample_points*25\n",
+    "    out_lin = int(sample_points*steps_to_predict)\n",
+    "\n",
+    "    model = th.nn.Sequential(\n",
+    "        th.nn.Conv1d(in_ch_conv_1,out_ch_conv_1,k_conv_1,st_conv_1,pad_conv_1),\n",
+    "        th.nn.LeakyReLU(),\n",
+    "        th.nn.MaxPool1d(k_pool_1,st_pool_1),\n",
+    "        th.nn.Conv1d(in_ch_conv_2,out_ch_conv_2,k_conv_2,st_conv_2,pad_conv_2),\n",
+    "        th.nn.LeakyReLU(),\n",
+    "        th.nn.MaxPool1d(k_pool_2,st_pool_2),\n",
+    "        th.nn.Flatten(),\n",
+    "        th.nn.Linear(in_lin,hidden_1),\n",
+    "        th.nn.LeakyReLU(),\n",
+    "        th.nn.Linear(hidden_1,out_lin),\n",
+    "        th.nn.Tanh(),\n",
+    "    )\n",
+    "    model.double()\n",
+    "    model.cuda()\n",
+    "    optimizer=th.optim.Adam(model.parameters(),lr=1e-5)\n",
+    "    loss_fn=th.nn.MSELoss()\n",
+    "    \n",
+    "    epochs_counter=100\n",
+    "    batch_size=64\n",
+    "    train_losses, valid_losses = train(model,X_train_th,X_valid_th,Y_train_th,Y_valid_th,epochs=epochs_counter,batch_size=batch_size)\n",
+    "    tosave_data = {'epoch': epochs_counter,\n",
+    "               'batch_size': batch_size,\n",
+    "               'model_state_dict': model.state_dict(),\n",
+    "               'optimizer_state_dict': optimizer.state_dict(),\n",
+    "               'loss': loss_fn,\n",
+    "               'training loss': train_losses,\n",
+    "               'valid loss': valid_losses,}\n",
+    "    th.save(tosave_data, str(i))"
    ]
   }
  ],
