--- a/Simulators/ks-simulator/Models/KS-modelFF.ipynb
+++ b/Simulators/ks-simulator/Models/KS-modelFF.ipynb
@@ -585,7 +585,7 @@
     "state_history_norm = min_max_scaler.fit_transform(state_history)\n",
     "\n",
     "#visualizing the solution of KS equation\n",
-    "drawKS(state_history_norm, position_x, time_counter,1,int(time_counter[-1]),20,4)\n",
+    "drawKS(state_history_norm, position_x, time_counter,1,200000,20,4)\n",
     "\n",
     "#histogram\n",
     "plothist(state_history_norm,bins=30)\n",
@@ -1328,12 +1328,11 @@
     "#TO SAVE THE MODEL\n",
     "\n",
     "# Here we create a dictionnary to store what we need: \n",
-    "# 1/ the epoch number\n",
-    "# 2/ the batch size\n",
-    "# 2/ the paramters of the model\n",
-    "# 3/ the paramters of the optimizer\n",
-    "# 4/ the loss function we used\n",
-    "tosave_data = {'epoch': epochs_counter,\n",
+    "\n",
+    "#TO SAVE THE MODEL\n",
+    "\n",
+    "tosave_data = {'model': model,\n",
+    "               'epoch': epoch,\n",
     "               'batch_size': batch_size,\n",
     "               'model_state_dict': model.state_dict(),\n",
     "               'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -1996,19 +1995,18 @@
    "source": [
     "#TO SAVE THE MODEL\n",
     "\n",
-    "# Here we create a dictionnary to store what we need: \n",
-    "# 1/ the epoch number\n",
-    "# 2/ the batch size\n",
-    "# 2/ the paramters of the model\n",
-    "# 3/ the paramters of the optimizer\n",
-    "# 4/ the loss function we used\n",
-    "tosave_data = {'epoch': epochs_counter,\n",
+    "#TO SAVE THE MODEL\n",
+    "\n",
+    "tosave_data = {'model': model,\n",
+    "               'epoch': epoch,\n",
     "               'batch_size': batch_size,\n",
     "               'model_state_dict': model.state_dict(),\n",
     "               'optimizer_state_dict': optimizer.state_dict(),\n",
     "               'loss': loss_fn,\n",
     "               'training loss': train_losses,\n",
     "               'valid loss': valid_losses,}\n",
+    "# Write a pickle file using pytorch \n",
+    "th.save(tosave_data, \"modelcv3_model2_u3\")\n",
     "# Write a pickle file using pytorch \n",
     "th.save(tosave_data, \"modelff2\")"
    ]
@@ -2653,13 +2651,10 @@
    "source": [
     "#TO SAVE THE MODEL\n",
     "\n",
-    "# Here we create a dictionnary to store what we need: \n",
-    "# 1/ the epoch number\n",
-    "# 2/ the batch size\n",
-    "# 2/ the paramters of the model\n",
-    "# 3/ the paramters of the optimizer\n",
-    "# 4/ the loss function we used\n",
-    "tosave_data = {'epoch': epochs_counter,\n",
+    "#TO SAVE THE MODEL\n",
+    "\n",
+    "tosave_data = {'model': model,\n",
+    "               'epoch': epoch,\n",
     "               'batch_size': batch_size,\n",
     "               'model_state_dict': model.state_dict(),\n",
     "               'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -2667,7 +2662,7 @@
     "               'training loss': train_losses,\n",
     "               'valid loss': valid_losses,}\n",
     "# Write a pickle file using pytorch \n",
-    "th.save(tosave_data, \"modelff3\")"
+    "th.save(tosave_data, \"modelcv3_model2_u3\")"
    ]
   },
   {
@@ -3368,13 +3363,8 @@
    "source": [
     "#TO SAVE THE MODEL\n",
     "\n",
-    "# Here we create a dictionnary to store what we need: \n",
-    "# 1/ the epoch number\n",
-    "# 2/ the batch size\n",
-    "# 2/ the paramters of the model\n",
-    "# 3/ the paramters of the optimizer\n",
-    "# 4/ the loss function we used\n",
-    "tosave_data = {'epoch': epochs_counter,\n",
+    "tosave_data = {'model': model,\n",
+    "               'epoch': epoch,\n",
     "               'batch_size': batch_size,\n",
     "               'model_state_dict': model.state_dict(),\n",
     "               'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -3382,6 +3372,7 @@
     "               'training loss': train_losses,\n",
     "               'valid loss': valid_losses,}\n",
     "# Write a pickle file using pytorch \n",
+    "th.save(tosave_data, \"modelcv3_model2_u3\")\n",
     "th.save(tosave_data, \"modelff4\")"
    ]
   },
@@ -3442,31 +3433,11 @@
     }
    ],
    "source": [
-    "#TO LOAD THE MODEL\n",
-    "\n",
-    "# First create objects of the good types \n",
-    "n_input=64\n",
-    "n_output=64\n",
-    "n_hidden=128\n",
-    "model = th.nn.Sequential(\n",
-    "    th.nn.Linear(n_input,n_hidden),\n",
-    "    th.nn.LeakyReLU(),\n",
-    "    th.nn.Linear(n_hidden,n_hidden),\n",
-    "    th.nn.Tanh(),\n",
-    "    th.nn.Linear(n_hidden,n_hidden),\n",
-    "    th.nn.Tanh(),\n",
-    "    th.nn.Linear(n_hidden,n_output),\n",
-    "    th.nn.Tanh()\n",
-    ")\n",
-    "model.double()\n",
-    "model.cuda()\n",
-    "optimizer=th.optim.Adam(model.parameters(),lr=1e-5)\n",
-    "loss_fn=th.nn.L1Loss()\n",
-    "\n",
     "# Load the pickle file to read the dictionnary from the file\n",
     "checkpoint = th.load(\"modelff4\")\n",
     "\n",
     "# restore the model and optimizer states: \n",
+    "model = checkpoint['model']\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
     "epoch = checkpoint['epoch']\n",
@@ -3589,6 +3560,53 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
