--- a/Simulators/ks-simulator/Models/KS-modelFF2.ipynb
+++ b/Simulators/ks-simulator/Models/KS-modelFF2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -943,6 +943,77 @@
     "N_step_pred=3000\n",
     "prediction(model,start_position,N_step_pred,state_history_norm_th)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n",
+      "11.0\n",
+      "10.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#conv: 2\n",
+    "#linear: 2\n",
+    "\n",
+    "Lin = size_conv_time\n",
+    "in_ch_conv_1 = 64\n",
+    "out_ch_conv_1 = 128\n",
+    "k_conv_1 = 5\n",
+    "st_conv_1 = 2\n",
+    "pad_conv_1 = 2\n",
+    "L_2 = (Lin+2*pad_conv_1-(k_conv_1-1)-1)/st_conv_1+1\n",
+    "\n",
+    "k_pool_1= 3\n",
+    "st_pool_1= 1\n",
+    "L_3 = (L_2 - k_pool_1)/st_pool_1 + 1\n",
+    "\n",
+    "in_ch_conv_2 = 128\n",
+    "out_ch_conv_2 = 64\n",
+    "k_conv_2 = 4\n",
+    "st_conv_2 = 1\n",
+    "pad_conv_2 = 1\n",
+    "L_4 = (L_3+2*pad_conv_2-(k_conv_2-1)-1)/st_conv_2+1\n",
+    "\n",
+    "k_pool_2= 2\n",
+    "st_pool_2= 1\n",
+    "L_5 = (L_4 - k_pool_2)/st_pool_2 + 1\n",
+    "\n",
+    "print(L_2)\n",
+    "print(L_3)\n",
+    "print(L_4)\n",
+    "print(L_5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_trainings=5\n",
+    "conv_time = np.linspace(2,10,n_trainings)\n",
+    "conv_time[0]"
+   ]
   }
  ],
  "metadata": {
@@ -968,6 +1039,53 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
